@@ -14,13 +14,19 @@ namespace AllOverIt.Aws.AppSync.Client
     /// <summary>An AppSync query and mutation graphql client.</summary>
     public sealed class AppSyncClient : IAppSyncClient
     {
-        private static readonly HttpClient HttpClient = new();
+        public static readonly string HttpClientName = typeof(AppSyncClient).FullName;
+
+        //private readonly HttpClient _httpClient;
+        private readonly IHttpClientFactory _httpClientFactory;
         private readonly IAppSyncClientConfiguration _configuration;
 
         /// <summary>Constructor.</summary>
+        /// <param name="httpClientFactory">The HttpClient factory used to get a named client for sending requests. The client
+        /// must be registered with the name provided by <see cref="HttpClientName"/>.</param>
         /// <param name="configuration">Contains configuration details for AppSync Graphql query and mutation operations.</param>
-        public AppSyncClient(IAppSyncClientConfiguration configuration)
+        public AppSyncClient(IHttpClientFactory httpClientFactory, IAppSyncClientConfiguration configuration)
         {
+            _httpClientFactory = httpClientFactory.WhenNotNull(nameof(httpClientFactory));
             _configuration = configuration.WhenNotNull(nameof(configuration));
         }
 
@@ -97,9 +103,11 @@ namespace AllOverIt.Aws.AppSync.Client
             return message;
         }
 
-        private static Task<HttpResponseMessage> GetHttpResponseMessageAsync(HttpRequestMessage requestMessage, CancellationToken cancellationToken)
+        private Task<HttpResponseMessage> GetHttpResponseMessageAsync(HttpRequestMessage requestMessage, CancellationToken cancellationToken)
         {
-            return HttpClient.SendAsync(requestMessage, HttpCompletionOption.ResponseHeadersRead, cancellationToken);
+            var httpClient = _httpClientFactory.CreateClient(HttpClientName);
+
+            return httpClient.SendAsync(requestMessage, HttpCompletionOption.ResponseHeadersRead, cancellationToken);
         }
     }
 }
