@@ -14,6 +14,9 @@ AllOverIt
   * Added SynchronizedCache - TESTS PENDING
   * Added NullBreadcrumbs
 
+AllOverIt.Aws.AppSync.Client
+  * Updated to use IHttpClientFactory
+
 
 31 Jul 2022
 Version 6.0.0-RC.3
